namespace Optsol.Components.Cache.Settings;

public class CacheSettings
{
    public virtual string? ConnectionString { get; set; }
}
